50-apps/grimmory/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grimmory
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: apps-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grimmory.neleoz.com
      secretName: grimmory-tls
  rules:
    - host: grimmory.neleoz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grimmory
                port:
                  number: 80
